# runtime-platform

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  pyproject.toml
.agrt/environments/graph_1778671489/: .integrity  pyvenv.cfg
.agrt/environments/graph_1778671759/: pyvenv.cfg
.agrt/sessions/graph_1778671489/: checkpoint.json  metadata.json
.agrt/sessions/graph_1778671759/: checkpoint.json  server.py
.github/workflows/: publish.yml
agrt/: __init__.py
agrt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agrt/artifacts/execution_reports/: graph_1778671489.json  graph_1778671759.json
apps/desktop/: index.css  index.html  main.js  package.json
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/landing/: next.config.mjs  package.json  tailwind.config.js
apps/landing/.next/: trace
apps/landing/public/: index.html
apps/landing/src/: App.css  App.tsx
apps/landing/src/app/: page.tsx  (+2 more)
benchmarks/: run_benchmarks.py
docs/: benchmarks.md
docs/architecture/: runtime_architecture_spec.md
runtime/api/: server.py
runtime/artifacts/benchmark_runs/: benchmark_1778184801.json  benchmark_1778184898.json
runtime/artifacts/execution_reports/: graph_1778184645.json  graph_1778184734.json  graph_1778184750.json  graph_1778184767.json  graph_1778184784.json  graph_1778184831.json  graph_1778184847.json  graph_1778184864.json  graph_1778184882.json  graph_1778185248.json  graph_1778191841.json  graph_1778191983.json  graph_1778193590.json  graph_1778193756.json  graph_1778195888.json  graph_1778195994.json  graph_1778665732.json
runtime/cli/: main.py
runtime/environment/collaboration/: git_provider.py
runtime/environment/sandbox/: attestation.py  venv_provider.py
runtime/environment/validation/: engine.py
runtime/generation/patching/: ast_patcher.py
runtime/kernel/cleanup/: manager.py
runtime/kernel/execution_graph/: schemas.py
runtime/kernel/lifecycle/: confidence.py  engine.py  evidence.py
runtime/kernel/policies/: timeouts.json
runtime/kernel/recovery/: engine.py
runtime/kernel/watchdog/: process_watchdog.py  termination.py  timeout_policy.py
runtime/replay/: engine.py
runtime/shared/interfaces/: base.py
scripts/: demo_mode.py  golden_workflow.py  test_sdk.py  test_watchdog.py
(+78 files in other folders)
