[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agrt"
version = "0.1.0"
description = "Antigravity Runtime: Autonomous Local Execution Infrastructure"
authors = [
    { name = "Vedant Jadhav", email = "vedant@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "psutil>=5.0.0",
]

[project.scripts]
agrt = "agrt.cli:main"

[tool.setuptools.packages.find]
include = ["agrt", "agrt.*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.py"]
