[package]
name = "app"
version = "0.1.0"
description = "Antigravity Runtime Desktop Shell"
authors = ["Vedant Jadhav"]
license = "MIT"
repository = "https://github.com/VedantJadhav701/antigravity-runtime"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "shell-open"] }

[features]
# by default Tauri runs in production mode
# remember to check out tauri.studio/docs/development/dev-it for more information
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
